BUG SERVER-79 ports variable wasn't thread safe